fixed clearScreen on win and created history functions
that functions add and get info from history